# dbgatlas

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  GOALS.md  README.md
3rdpart/: AGENTS.md  README.md
3rdpart/cpp/ida-sdk/include/: qtree.hpp  range.hpp  regfinder.hpp  registry.hpp  search.hpp  segment.hpp  srclang.hpp  strlist.hpp  tryblks.hpp  typeinf.hpp  ua.hpp  undo.hpp  xref.hpp
crates/: AGENTS.md
crates/dbgatlas-adapter/: Cargo.toml
crates/dbgatlas-adapter/src/: lib.rs
crates/dbgatlas-cli/: Cargo.toml
crates/dbgatlas-cli/src/: main.rs
crates/dbgatlas-cli/tests/: json_debug_workflow.rs
crates/dbgatlas-core/: Cargo.toml
crates/dbgatlas-core/src/: lib.rs
crates/dbgatlas-dbgeng/: Cargo.toml
crates/dbgatlas-dbgeng-sys/: Cargo.toml  build.rs
crates/dbgatlas-dbgeng-sys/src/: lib.rs
crates/dbgatlas-dbgeng/src/: lib.rs
crates/dbgatlas-debug/: Cargo.toml
crates/dbgatlas-debug/src/: lib.rs
crates/dbgatlas-etw/: Cargo.toml
crates/dbgatlas-etw-sys/: Cargo.toml  build.rs
crates/dbgatlas-etw-sys/src/: lib.rs
crates/dbgatlas-etw/src/: lib.rs
crates/dbgatlas-ida/: Cargo.toml
crates/dbgatlas-ida-sys/: Cargo.toml  build.rs
crates/dbgatlas-ida-sys/src/: lib.rs
crates/dbgatlas-ida/src/: lib.rs
crates/dbgatlas-mcp/: Cargo.toml
crates/dbgatlas-mcp/src/: lib.rs  main.rs
crates/dbgatlas-model/: Cargo.toml
crates/dbgatlas-model/src/: lib.rs
crates/dbgatlas-recording/: Cargo.toml
crates/dbgatlas-recording/src/: lib.rs
crates/dbgatlas-runtime/: Cargo.toml
crates/dbgatlas-runtime/src/: lib.rs
crates/dbgatlas-service/: Cargo.toml
crates/dbgatlas-service/src/: lib.rs
crates/dbgatlas-worker-protocol/: Cargo.toml
crates/dbgatlas-worker-protocol/src/: lib.rs
crates/dbgatlas-workspace/: Cargo.toml
crates/dbgatlas-workspace/src/: lib.rs
docs/: AGENTS.md  adapter-model.md  architecture.md  native-ffi.md  recording-model.md  reverse-core-functions.md  roadmap.md  runtime-model.md  worker-model.md  workspace-model.md
native/: AGENTS.md  CMakeLists.txt
native/adapters/dbgeng/: dbgatlas_dbgeng.cpp
native/adapters/etw/: dbgatlas_etw.cpp
native/adapters/ida/: dbgatlas_ida.cpp  dbgatlas_ida_runtime.cpp  dbgatlas_ida_runtime.h
native/include/: dbgatlas_dbgeng.h  dbgatlas_etw.h  dbgatlas_ida.h  dbgatlas_native.h
script/: build-release-install.ps1  install-release.ps1  run-reverse-e2e.ps1
xtask/: AGENTS.md
xtask/installer/: DbgAtlas.wxs  License.rtf  README.md  ReadDoctorSummary.vbs
xtask/src/: main.rs
