[package]
name = "dbgatlas-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
dbgatlas-adapter.workspace = true
dbgatlas-model.workspace = true
dbgatlas-workspace.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
