[package]
name = "dbgatlas-dbgeng"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
dbgatlas-dbgeng-sys.workspace = true
serde.workspace = true
thiserror.workspace = true

[target.'cfg(windows)'.dev-dependencies]
tempfile.workspace = true
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Memory",
    "Win32_System_Threading",
] }
