[package]
name = "dbgatlas-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
dbgatlas-debug.workspace = true
dbgatlas-dbgeng.workspace = true
dbgatlas-model.workspace = true
dbgatlas-runtime.workspace = true
dbgatlas-worker-protocol.workspace = true
dbgatlas-workspace.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_JobObjects",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }
windows-service = "0.8.1"
